<resources>
    <string name="app_name">MediX</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="patient_details">Patient details</string>
    <string name="gender">Gender</string>
    <string name="describe_your_problem">Describe Your Problem</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="set_appointment">Set Appointment</string>
    <string name="your_chance_is_after">Your chance is after</string>
    <string name="ongoing_number">Ongoing Number :</string>
    <string name="your_appointment_number">Your Appointment Number :</string>

    <string name="title_home">Home</string>
    <string name="title_profile">Profile</string>
    <string name="title_calender">Appointment</string>

</resources>
